catkin_ws/logs/backend/build.make.1069.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:334:4: warning: multi-line comment [-Wcomment]
    // cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
    ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h: In member function ‘void SLAM::Mapping::setRosHandler(RosHandler&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:74:58: error: expected ‘;’ before ‘}’ token
   void setRosHandler(RosHandler& rosnode){ px4 = rosnode };
                                                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:35:3: error: expected identifier before ‘)’ token
   )
   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:31:1: error: prototype for ‘SLAM::Mapping::Mapping(SLAM::IFeatures*, SLAM::ITransformMatEst*, SLAM::IPoseGraph*, int)’ does not match any in class ‘SLAM::Mapping’
 Mapping::Mapping(
 ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:36:7: error: candidates are: SLAM::Mapping::Mapping(const SLAM::Mapping&)
 class Mapping {
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:53:2: error:                 SLAM::Mapping::Mapping(SLAM::IFeatures*, SLAM::ITransformMatEst*, SLAM::IPoseGraph*)
  Mapping(
  ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
